--- a/app.axaml
+++ b/app.axaml
@@ -1,7 +1,15 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="linuxblox.App"
-             RequestedThemeVariant="Dark">
+             xmlns:local="using:linuxblox"
+             RequestedThemeVariant="Default">
+
+    <Application.DataTemplates>
+        <DataTemplate DataType="{x:Type local:MainViewModel}">
+            <local:MainView/>
+        </DataTemplate>
+    </Application.DataTemplates>
+
     <Application.Styles>
         <FluentTheme />
     </Application.Styles>
