--- a/app.axaml
+++ b/app.axaml
@@ -1,12 +1,13 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="linuxblox.App"
-             xmlns:local="using:linuxblox"
+             xmlns:vm="using:linuxblox.ViewModels"
+             xmlns:v="using:linuxblox.Views"
              RequestedThemeVariant="Default">
 
     <Application.DataTemplates>
-        <DataTemplate DataType="{x:Type local:MainViewModel}">
-            <local:MainView/>
+        <DataTemplate DataType="{x:Type vm:MainViewModel}">
+            <v:MainView/>
         </DataTemplate>
     </Application.DataTemplates>
 
