--- a/mainwindow.axaml
+++ b/mainwindow.axaml
@@ -1,62 +1,74 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="using:linuxblox.viewmodels"
+        mc:Ignorable="d"
         x:Class="linuxblox.MainWindow"
         Title="LinuxBlox"
         Width="700" Height="500">
   
-  <Design.DataContext>
+  <d:DataContext>
     <vm:MainWindowViewModel/>
-  </Design.DataContext>
+  </d:DataContext>
+
+  <Window.Styles>
+    <Style Selector="Button.success">
+      <Setter Property="Background" Value="Green"/>
+      <Setter Property="Foreground" Value="White"/>
+      <Setter Property="Padding" Value="20,10"/>
+    </Style>
+    <Style Selector="TextBlock.h1">
+      <Setter Property="FontWeight" Value="Bold"/>
+      <Setter Property="FontSize" Value="16"/>
+    </Style>
+  </Window.Styles>
 
   <DockPanel Margin="15">
-    <Border DockPanel.Dock="Bottom" BorderBrush="Gray" BorderThickness="0,1,0,0" Padding="5,10,5,5">
-      <TextBlock Text="{Binding StatusMessage}" TextWrapping="Wrap" Opacity="0.7"/>
+    <Border DockPanel.Dock="Bottom"
+            BorderBrush="Gray"
+            BorderThickness="0,1,0,0"
+            Padding="5,10,5,5">
+      <TextBlock Opacity="0.7"
+                 Text="{Binding StatusMessage}"
+                 TextWrapping="Wrap"/>
     </Border>
 
     <StackPanel Spacing="15">
-      <Button Content="Play Roblox" 
-              Command="{Binding PlayCommand}" 
-              HorizontalAlignment="Left" 
-              Padding="20,10" 
-              Background="Green"/>
+      <Button Content="Play Roblox"
+              Command="{Binding PlayCommand}"
+              HorizontalAlignment="Left"
+              Classes="success"/>
         
       <Separator Margin="0,10"/>
         
-      <TextBlock Text="FastFlag Editor" FontWeight="Bold" FontSize="16"/>
+      <TextBlock Text="FastFlag Editor" Classes="h1"/>
 
-      <ListBox ItemsSource="{Binding Flags}" Background="Transparent" BorderThickness="0">
-        <ListBox.ItemTemplate>
-          <DataTemplate>
-            <ContentControl Content="{Binding}">
-              <ContentControl.DataTemplates>
-                
-                <DataTemplate DataType="vm:InputFlagViewModel">
-                  <Grid ColumnDefinitions="Auto,*,Auto" Margin="0,5">
-                    <CheckBox Grid.Column="0" IsChecked="{Binding IsEnabled}" VerticalAlignment="Center"/>
-                    <TextBlock Grid.Column="1" Text="{Binding Description}" VerticalAlignment="Center" Margin="10,0"/>
-                    <TextBox Grid.Column="2" Text="{Binding Value}" MinWidth="100" IsEnabled="{Binding IsEnabled}"/>
-                  </Grid>
-                </DataTemplate>
-                
-                <DataTemplate DataType="vm:ToggleFlagViewModel">
-                  <Grid ColumnDefinitions="Auto,*,Auto" Margin="0,5">
-                    <CheckBox Grid.Column="0" IsChecked="{Binding IsEnabled}" VerticalAlignment="Center"/>
-                    <TextBlock Grid.Column="1" Text="{Binding Description}" VerticalAlignment="Center" Margin="10,0"/>
-                    <ToggleSwitch Grid.Column="2" IsChecked="{Binding IsOn}" IsEnabled="{Binding IsEnabled}"/>
-                  </Grid>
-                </DataTemplate>
-                
-              </ContentControl.DataTemplates>
-            </ContentControl>
+      <ListBox ItemsSource="{Binding Flags}"
+               Background="Transparent"
+               BorderThickness="0">
+        <ListBox.DataTemplates>
+          <DataTemplate DataType="{x:Type vm:InputFlagViewModel}">
+            <Grid ColumnDefinitions="Auto,*,Auto" Margin="0,5">
+              <CheckBox Grid.Column="0" IsChecked="{Binding IsEnabled}" VerticalAlignment="Center"/>
+              <TextBlock Grid.Column="1" Text="{Binding Description}" VerticalAlignment="Center" Margin="10,0"/>
+              <TextBox Grid.Column="2" Text="{Binding Value}" MinWidth="100" IsEnabled="{Binding IsEnabled}"/>
+            </Grid>
           </DataTemplate>
-        </ListBox.ItemTemplate>
+          
+          <DataTemplate DataType="{x:Type vm:ToggleFlagViewModel}">
+            <Grid ColumnDefinitions="Auto,*,Auto" Margin="0,5">
+              <CheckBox Grid.Column="0" IsChecked="{Binding IsEnabled}" VerticalAlignment="Center"/>
+              <TextBlock Grid.Column="1" Text="{Binding Description}" VerticalAlignment="Center" Margin="10,0"/>
+              <ToggleSwitch Grid.Column="2" IsChecked="{Binding IsOn}" IsEnabled="{Binding IsEnabled}"/>
+            </Grid>
+          </DataTemplate>
+        </ListBox.DataTemplates>
       </ListBox>
       
-      <Button Content="Save Flags" 
-              Command="{Binding SaveFlagsCommand}" 
+      <Button Content="Save Flags"
+              Command="{Binding SaveFlagsCommand}"
               HorizontalAlignment="Right"/>
-      
     </StackPanel>
   </DockPanel>
 </Window>
