--- a/mainwindow.axaml
+++ b/mainwindow.axaml
@@ -1,48 +1,36 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="using:linuxblox.viewmodels"
-        mc:Ignorable="d"
         x:Class="linuxblox.MainWindow"
         Title="LinuxBlox"
         Width="700" Height="500">
   
-  <d:DataContext>
+  <Design.DataContext>
     <vm:MainWindowViewModel/>
-  </d:DataContext>
-
-  <Window.Styles>
-    <Style Selector="Button.success">
-      <Setter Property="Background" Value="Green"/>
-      <Setter Property="Foreground" Value="White"/>
-      <Setter Property="Padding" Value="20,10"/>
-    </Style>
-    <Style Selector="TextBlock.h1">
-      <Setter Property="FontWeight" Value="Bold"/>
-      <Setter Property="FontSize" Value="16"/>
-    </Style>
-  </Window.Styles>
+  </Design.DataContext>
 
   <DockPanel Margin="15">
     <Border DockPanel.Dock="Bottom"
             BorderBrush="Gray"
             BorderThickness="0,1,0,0"
             Padding="5,10,5,5">
-      <TextBlock Opacity="0.7"
-                 Text="{Binding StatusMessage}"
-                 TextWrapping="Wrap"/>
+      <TextBlock Text="{Binding StatusMessage}"
+                 TextWrapping="Wrap"
+                 Opacity="0.7"/>
     </Border>
 
     <StackPanel Spacing="15">
-      <Button Content="Play Roblox"
-              Command="{Binding PlayCommand}"
-              HorizontalAlignment="Left"
-              Classes="success"/>
+      <Button Content="Play Roblox" 
+              Command="{Binding PlayCommand}" 
+              HorizontalAlignment="Left" 
+              Padding="20,10" 
+              Background="Green"/>
         
       <Separator Margin="0,10"/>
         
-      <TextBlock Text="FastFlag Editor" Classes="h1"/>
+      <TextBlock Text="FastFlag Editor"
+                 FontWeight="Bold"
+                 FontSize="16"/>
 
       <ListBox ItemsSource="{Binding Flags}"
                Background="Transparent"
@@ -66,8 +54,8 @@
         </ListBox.DataTemplates>
       </ListBox>
       
-      <Button Content="Save Flags"
-              Command="{Binding SaveFlagsCommand}"
+      <Button Content="Save Flags" 
+              Command="{Binding SaveFlagsCommand}" 
               HorizontalAlignment="Right"/>
     </StackPanel>
   </DockPanel>
