--- a/mainwindow.axaml
+++ b/mainwindow.axaml
@@ -20,7 +20,7 @@
     </Border>
 
     <StackPanel Spacing="15">
-      <Button Content="Play Roblox" 
+      <Button Content="Launch Sober" 
               Command="{Binding PlayCommand}" 
               HorizontalAlignment="Left" 
               Padding="20,10" 
