--- a/app.axaml
+++ b/app.axaml
@@ -1,6 +1,6 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="linuxblox.App"
+             x:Class="LinuxBlox.App"
              RequestedThemeVariant="Dark">
     <Application.Styles>
         <FluentTheme />
