--- a/views/SettingsView.axaml
+++ b/views/SettingsView.axaml
@@ -21,7 +21,9 @@
         <DataTemplate DataType="{x:Type vm:InputFlagViewModel}">
           <Grid ColumnDefinitions="*,Auto" Margin="0,5">
             <TextBlock Grid.Column="0" Text="{Binding Description}" VerticalAlignment="Center" Margin="10,0"/>
-            <TextBox Grid.Column="1" Text="{Binding Value, UpdateSourceTrigger=PropertyChanged}" MinWidth="100" IsEnabled="{Binding IsEnabled}"/>
+            
+            <TextBox Grid.Column="1" Text="{Binding Value}" MinWidth="100" IsEnabled="{Binding IsEnabled}"/>
+
           </Grid>
         </DataTemplate>
 
